--- a/tests/behat/behat.local.yml.example
+++ b/tests/behat/behat.local.yml.example
@@ -1,10 +1,7 @@
 default:
   extensions:
     Behat\MinkExtension\Extension:
-      base_url: BASE_URL
-      # For saucelabs.com integration replace the below with your sauce username and API key
-      selenium2:
-        wd_host: $SAUCE_USERNAME:$SAUCE_ACCESS_KEY@ondemand.saucelabs.com/wd/hub
-    # For JIRA integration
-    VIPSoft\JiraExtension\Extension:
-      host: http://jira.yourhost.com/
+      base_url: 'http://127.0.0.1:80'
+    Drupal\DrupalExtension\Extension:
+      drush:
+        alias: self
