--- a/.travis.yml
+++ b/.travis.yml
@@ -36,20 +36,18 @@ before_script:
   - cd kickstart
   - sudo chmod -R 777 sites/all/
   - sudo chmod -R 777 sites/default/files/
-  - drush si commerce_kickstart --sites-subdir=default --db-url=mysql://root:@127.0.0.1/drupal --account-name=admin --account-pass=admin --site-mail=admin@example.com --site-name="Commerce Kickstart Profile" --yes
+  - php -d sendmail_path=`which true` `pear config-get php_dir`/drush/drush.php  si commerce_kickstart --sites-subdir=default --db-url=mysql://root:@127.0.0.1/drupal --account-name=admin --account-pass=admin --site-mail=admin@example.com --site-name="Commerce Kickstart Profile" --yes
   - drush cc all --yes
+
+  # Start the web server
+  - sudo drush runserver --server=builtin 8888 &
+  - sleep 5s # give Web server some time to bind to sockets, etc
   - cd ../
 
   # Setup display for selenium
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 5s
-
-  # Run the drush built in webserver.
-  - sudo chmod u+x /home/travis/.phpenv/shims/drush
-  - sudo ln -s /home/travis/.phpenv/shims/drush /usr/bin/drush
-  - sudo drush --root=$PWD/kickstart runserver --server=builtin 8888 &
-  - sleep 5s # give Web server some time to bind to sockets, etc
 
   # Get Selenium
   - wget http://selenium.googlecode.com/files/selenium-server-standalone-2.33.0.jar
