--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ before_script:
   - drush cc all --yes
 
   # Start the web server
-  - sudo drush runserver --server=builtin 8888 &
+  - drush runserver --server=builtin 8888 &
   - sleep 5s # give Web server some time to bind to sockets, etc
   - cd ../
 
