Fixed how drupal_users should be created

--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -7,8 +7,7 @@ default:
     parameters:
       drupal_users:
         admin user:
-          username: 'admin'
-          password: 'admin'
+          'admin'
       default_browser: 'goutte'
   extensions:
   extensions:
