--- a/.travis.yml
+++ b/.travis.yml
@@ -25,15 +25,25 @@ install:
   - echo "<?php" >> /home/travis/.drush/kickstart.aliases.drushrc.php
   - echo "\$aliases['kickstart.local'] = array(" >> /home/travis/.drush/kickstart.aliases.drushrc.php
   - echo "  'root' => '$PWD/kickstart'," >> /home/travis/.drush/kickstart.aliases.drushrc.php
-  - echo "  'uri'  =>  '127.0.0.1:8888'" >> /home/travis/.drush/kickstart.aliases.drushrc.php
+  - echo "  'uri'  =>  '127.0.0.1:8888'," >> /home/travis/.drush/kickstart.aliases.drushrc.php
   - echo ");" >> /home/travis/.drush/kickstart.aliases.drushrc.php
+
+  # Prepare behat.local.yml
+  - touch ./behat.local.yml
+  - echo "default:" >> ./behat.local.yml
+  - echo "  extensions:" >> ./behat.local.yml
+  - echo "    Behat\MinkExtension\Extension:" >> ./behat.local.yml
+  - echo "      base_url: 'http://127.0.0.1:8888'" >> ./behat.local.yml
+  - echo "    Drupal\DrupalExtension\Extension:" >> ./behat.local.yml
+  - echo "      blackbox: ~" >> ./behat.local.yml
+  - echo "      drush:" >> ./behat.local.yml
+  - echo "        alias: 'kickstart.local'" >> ./behat.local.yml
+  - echo "      drupal:" >> ./behat.local.yml
+  - echo "        drupal_root: '$PWD/kickstart'" >> ./behat.local.yml
 
   # Run composer
   - cd ./tests/behat
   - composer install
-
-  # Setup Behat
-  - cp behat.local.yml.example behat.local.yml
 
   # Going back
   - cd ../../
