Add drupal api settings to behat.local.yml.example

--- a/tests/behat/behat.local.yml.example
+++ b/tests/behat/behat.local.yml.example
@@ -7,3 +7,5 @@ default:
       api_driver: 'drush'
       drush:
         alias: 'kickstart.local'
+      drupal:
+        drupal_root: '/path/to/kickstart'
