--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -18,7 +18,7 @@ default:
     Drupal\DrupalExtension\Extension:
       blackbox: ~
       drush: ~
-      api_driver: 'drush'
+      api_driver: 'drupal'
 
 imports:
   - behat.local.yml
