--- a/tests/behat/behat.local.yml.example
+++ b/tests/behat/behat.local.yml.example
@@ -4,8 +4,6 @@ default:
       base_url: 'http://127.0.0.1:8888'
     Drupal\DrupalExtension\Extension:
       blackbox: ~
-      api_driver: 'drush'
-      drush:
-        alias: 'kickstart.local'
+      api_driver: 'drupal'
       drupal:
         drupal_root: '/path/to/kickstart'
