--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,15 @@ install:
   - phpenv rehash
 
   # Prepare behat.local.yml
-  - touch ./behat.local.yml
-  - echo "default:" >> ./behat.local.yml
-  - echo "  extensions:" >> ./behat.local.yml
-  - echo "    Behat\MinkExtension\Extension:" >> ./behat.local.yml
-  - echo "      base_url: 'http://127.0.0.1:8888'" >> ./behat.local.yml
-  - echo "    Drupal\DrupalExtension\Extension:" >> ./behat.local.yml
-  - echo "      blackbox: ~" >> ./behat.local.yml
-  - echo "      drupal:" >> ./behat.local.yml
-  - echo "        drupal_root: '$PWD/kickstart'" >> ./behat.local.yml
+  - touch ./tests/behat/behat.local.yml
+  - echo "default:" >> ./tests/behat/behat.local.yml
+  - echo "  extensions:" >> ./tests/behat/behat.local.yml
+  - echo "    Behat\MinkExtension\Extension:" >> ./tests/behat/behat.local.yml
+  - echo "      base_url: http://127.0.0.1:8888" >> ./tests/behat/behat.local.yml
+  - echo "    Drupal\DrupalExtension\Extension:" >> ./tests/behat/behat.local.yml
+  - echo "      blackbox: ~" >> ./tests/behat/behat.local.yml
+  - echo "      drupal:" >> ./tests/behat/behat.local.yml
+  - echo "        drupal_root: $PWD/kickstart" >> ./tests/behat/behat.local.yml
 
   # Run composer
   - cd ./tests/behat
