--- a/.travis.yml
+++ b/.travis.yml
@@ -38,11 +38,11 @@ before_script:
   - sudo chmod -R 777 sites/default/files/
   - php -d sendmail_path=`which true` `pear config-get php_dir`/drush/drush.php  si commerce_kickstart --sites-subdir=default --db-url=mysql://root:@127.0.0.1/drupal --account-name=admin --account-pass=admin --site-mail=admin@example.com --site-name="Commerce Kickstart Profile" --yes
   - drush cc all --yes
+  - cd ../
 
   # Start the web server
-  - drush runserver --server=builtin 8888 &
-  - sleep 5s # give Web server some time to bind to sockets, etc
-  - cd ../
+  - ./scripts/apache_server.sh
+  - sleep 5s
 
   # Setup display for selenium
   - export DISPLAY=:99.0
