--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_script:
   - cd kickstart
   - sudo chmod -R 777 sites/all
   - sudo chmod 755 sites/default
-  - mkdir sites/default/files
+  - [ -d sites/default/files ] || mkdir sites/default/files
   - sudo chmod -R 777 sites/default/files
   - ls -l sites/default
   - php -d sendmail_path=`which true` `pear config-get php_dir`/drush/drush.php  si commerce_kickstart --sites-subdir=default --db-url=mysql://root:@127.0.0.1/drupal --account-name=admin --account-pass=admin --site-mail=admin@example.com --site-name="Commerce Kickstart Profile" --yes
