--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,16 @@ before_script:
   # Install Kickstart Profile
   - drush make --prepare-install build-commerce-kickstart.make kickstart --yes
   - cd kickstart
-  - sudo chmod -R 777 sites/all/
-  - sudo chmod -R 777 sites/default/files/
+  - sudo chmod -R 777 sites/all
+  - sudo chmod 755 sites/default
+  - sudo chmod -R 777 sites/default/files
+  - ls -l sites/default
   - php -d sendmail_path=`which true` `pear config-get php_dir`/drush/drush.php  si commerce_kickstart --sites-subdir=default --db-url=mysql://root:@127.0.0.1/drupal --account-name=admin --account-pass=admin --site-mail=admin@example.com --site-name="Commerce Kickstart Profile" --yes
   - drush cc all --yes
   - cd ../
 
   # Start the web server
+  - mkdir logs
   - ./scripts/apache_server.sh
   - sleep 5s
 
@@ -61,3 +64,7 @@ script:
   # Run behat tests
   - ./bin/behat
 
+  # Output error and access logs
+  - cat ./logs/php.error.log || true
+  - cat ./logs/apache.error.log || true
+  - cat ./logs/apache.access.log || true
