--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,9 @@ install:
   - phpenv rehash
 
   # Prepare ./tests/behat/behat.local.yml
-  - ./scripts/behat_local_yml.sh
+  - sudo cp -f build/travis-ci-behat-yml tests/behat/behat.local.yml
+  - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)/kickstart?g" --in-place tests/behat/behat.local.yml
+  - cat tests/behat/behat.local.yml
 
   # Run composer
   - cd ./tests/behat
@@ -52,6 +54,7 @@ before_script:
   - sudo cp -f ../build/travis-ci-apache /etc/apache2/sites-available/default
   - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default
   - sudo service apache2 restart
+  - cat /etc/apache2/sites-available/default
   - sleep 5s
   - cd ..
 
